# exposure-legacy

./: .gitignore  .rubocop.yml  Gemfile  LICENSE.txt  README.md  exposure.gemspec
core/: Cargo.toml
core/src/: lib.rs
lib/: exposure.rb
lib/exposure/: core.rb  ext.rb  trace.rb  version.rb
spec/: exposure_spec.rb  spec_helper.rb
