[package]
name = "exposure_core"
version = "0.1.0"
authors = ["Nigel Baillie <metreckk@gmail.com>"]
edition = "2018"

[lib]
name = "exposure"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.4"
fnv = "1.0.6"
pathdiff = "*"
num_cpus = "*"
